Fix lecture not being visible on the backside on firefox browsers

--- a/imports/ui/card/card.scss
+++ b/imports/ui/card/card.scss
@@ -121,7 +121,6 @@ img.cardside {
 }
 
 .back {
-  backface-visibility: hidden;
   transform: rotateY(180deg);
   overflow: visible;
 }
